...
                }.frame (alignment: (.leading))
            }
            Text("In case of emergency please call 911!").bold().background(.red)
            Button("Dismiss") {
                presentationMode.wrappedValue.dismiss()
            }
            .accessibility(identifier: "clinicanViewIdealDismissButton")
        }
        .frame(maxWidth: .infinity, maxHeight: .infinity)
        .edgesIgnoringSafeArea(.all)
        .onTapGesture {
            presentationMode.wrappedValue.dismiss()
        }
...
