...
import Foundation

public class ClinicianIdealDriveCalculatorViewModel: ObservableObject {
    
    enum USStates: String, CaseIterable, Identifiable {
        case empty = " "
        case CO
        case MN
        case WI
        
        var id: String {self.rawValue}
    }
    
...
